# fiftyfive

./: .gitignore  README.md  example.py  pyproject.toml
fiftyfive/: __init__.py  api.py  decorators.py  models.py
