[project]
name = "50five"
version = "0.0.1"
description = "Python 3 package to retrieve EV charger data from 50five"
dependencies = [
    "aiohttp",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Home Automation"
]
readme = "README.md"
license = {text = "GPLv3+"}

[project.urls]
"Homepage" = "https://github.com/Crazy-Duck/python-50five"
"Bug Tracker" = "https://github.com/Crazy-Duck/python-50five/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.mypy]
python_version = 3.13
show_error_codes = true
follow_imports = silent
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true